--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -128,6 +128,17 @@ var _hmt = _hmt || [];
 		            </div>
 		          </div>
 		        </li>
+		        <li class="align-top">
+		          <div class="item-content">
+		            <div class="item-inner">
+		              <div class="item-title label">验证码</div>
+		              <input type="text" placeholder="验证码" id="j_captcha">
+		              <div class="item-input">
+		                <img id="captcha_img" alt="点击更换" onclick="changeVerifyCode(this)" src="../Kaptcha"></img>
+		              </div>
+		            </div>
+		          </div>
+		        </li>
 		        
 		      </ul>
 		    </div>
@@ -145,6 +156,7 @@ var _hmt = _hmt || [];
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+    <script type='text/javascript' src='../resourcecs/js/common/common.js' charset='utf-8'></script>
   	<script type='text/javascript' src='../resourcecs/js/shop/shopoperation.js' charset='utf-8'></script>
 
   </body>
