解决无法接受图片的问题

--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
 		            <div class="item-inner">
 		              <div class="item-title label">缩略图</div>
 		              <div class="item-input">
-		                <input type="file" id="shop-file">
+		                <input type="file" id="shop-img">
 		              </div>
 		            </div>
 		          </div>
