--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -144,7 +144,7 @@ var _hmt = _hmt || [];
 		    </div>
 		    <div class="content-block">
 		      <div class="row">
-		        <div class="col-50"><a href="#" class="button button-big button-fill button-danger">返回</a></div>
+		        <div class="col-50"><a href="#" class="button button-big button-fill button-danger back">返回</a></div>
 		        <div class="col-50"><a href="#" class="button button-big button-fill button-success" id=submit>提交</a></div>
 		      </div>
 		    </div>
