修改密码前端实现

--- a/src/main/webapp/WEB-INF/html/shop/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/shop/shoplist.html
@@ -30,13 +30,17 @@
         </div>
         <div class="content-block">
 			<div class="row">
-				<div class="col-50">
-					<a href="" id="log-out"
+			    <div class="col-33">
+                    <a href="/CampusShop/shopadmin/ownerbind" class="button button-big button-fill button-success">账号绑定</a>
+                </div>
+				<div class="col-33">
+					<a href="/CampusShop/shopadmin/logout" id="log-out"
 						class="button button-big button-fill button-danger">退出系统</a>
 				</div>
-                <div class="col-50">
+                <div class="col-33">
                     <a href="/CampusShop/shopadmin/changepsw" class="button button-big button-fill button-success">修改密码</a>
                 </div>
+
 			</div>
 		</div>
     </div>
