--- a/src/main/webapp/WEB-INF/html/frontend/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shoplist.html
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 			<nav class="bar bar-tab">
-				<a class="tab-item" href="/myo2o/frontend/index" external> <span
+				<a class="tab-item" href="/CampusShop/frontend/index" external> <span
 					class="icon icon-home"></span> <span class="tab-label">首页</span>
 				</a> <a class="tab-item" href="#" id="me"> <span
 					class="icon icon-me"></span> <span class="tab-label">我</span>
@@ -45,38 +45,12 @@
 				data-distance="100">
 				<!-- 这里是页面内容区 -->
 				<div class="shoplist-button-div" id="shoplist-search-div">
-					<!-- <a href="#" class="button">所有货物</a>
-                        <a href="#" class="button">吃的</a>
-                        <a href="#" class="button">喝的</a>
-                        <a href="#" class="button">Usual Button 1</a>
-                        <a href="#" class="button">Usual Button 1</a>
-                        <a href="#" class="button">Usual Button 1</a> -->
 				</div>
 				<div class="select-wrap">
 					<select class="select" id="area-search"></select>
 				</div>
 				<div class="list-div shop-list">
-					<!-- <div class="card">
-                            <div class="card-header">传统火锅店</div>
-                            <div class="card-content">
-                                <div class="list-block media-list">
-                                    <ul>
-                                        <li class="item-content">
-                                            <div class="item-media">
-                                                <img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44">
-                                            </div>
-                                            <div class="item-inner">
-                                                <div class="item-subtitle"></div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <span>2015/01/15</span>
-                                <span>5 评论</span>
-                            </div>
-                        </div> -->
+
 				</div>
 				<div class="infinite-scroll-preloader">
 					<div class="preloader"></div>
@@ -89,13 +63,13 @@
 	<div class="panel panel-right panel-reveal" id="panel-left-demo">
 		<div class="content-block">
 			<p>
-				<a href="/myo2o/frontend/myrecord" class="close-panel">消费记录</a>
+				<a href="/CampusShop/frontend/myrecord" class="close-panel">消费记录</a>
 			</p>
 			<p>
-				<a href="/myo2o/frontend/mypoint" class="close-panel">我的积分</a>
+				<a href="/CampusShop/frontend/mypoint" class="close-panel">我的积分</a>
 			</p>
 			<p>
-				<a href="/myo2o/frontend/pointrecord" class="close-panel">积分兑换记录</a>
+				<a href="/CampusShop/frontend/pointrecord" class="close-panel">积分兑换记录</a>
 			</p>
 			<!-- Click on link with "close-panel" class will close panel -->
 		</div>
